kubernetes/development/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-manager-api
spec:
  ports:
    - name: http
      port: 22334
      targetPort: 22334

---

apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: minecraft-server-manager-api
  labels:
    kubernetes.io/service-name: minecraft-server-manager-api
addressType: IPv4
ports:
  - name: http
    port: 22334
endpoints:
  - addresses:
      - "192.168.1.9"
