kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-manager-website
spec:
  selector:
    app: minecraft-server-manager-website
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
